# kube-schedule-scaler

./: Dockerfile  README.md  build_and_push.sh  pyproject.toml
deploy/: deployment.yaml
schedule_scaling/: main.py
